adding the core funcionalits

--- a/.env.example
+++ b/.env.example
@@ -24,4 +24,9 @@ SENTRY_AUTH_TOKEN=your_sentry_token
 NODE_ENV=development
 
 # API Configuration
-API_URL=http://localhost:5001
+# Firebase Functions API (local emulator)
+FIREBASE_API_URL=http://localhost:5001
+# NestJS Backend API
+API_URL=http://localhost:3001
+# Next.js Frontend
+FRONTEND_URL=http://localhost:3000
