--- a/bellebook-backend/.env.example
+++ b/bellebook-backend/.env.example
@@ -13,10 +13,16 @@ JWT_EXPIRES_IN=7d
 # 4. Configure OAuth 2.0
 GOOGLE_CLIENT_ID=your_google_client_id
 GOOGLE_CLIENT_SECRET=your_google_client_secret
-GOOGLE_REDIRECT_URI=http://localhost:3000/api/google-calendar/callback
+GOOGLE_REDIRECT_URI=http://localhost:3001/api/google-calendar/callback
 
-# Frontend URL
-FRONTEND_URL=http://localhost:3001
+# Frontend URL (Next.js)
+FRONTEND_URL=http://localhost:3000
+
+# Backend URL (NestJS - for self-reference)
+BACKEND_URL=http://localhost:3001
+
+# CORS Configuration
+CORS_ORIGIN=http://localhost:3000
 
 # Informações do Prestador de Serviço
 # ID do usuário prestador no banco de dados
@@ -24,3 +30,19 @@ PROVIDER_USER_ID=id_usuario_prestador
 PROVIDER_EMAIL=email_prestador@gmail.com
 PROVIDER_NAME=Nome do Prestador
 BUSINESS_ADDRESS=Endereço do Estabelecimento
+
+# SendGrid Email Service
+# Para obter a API Key:
+# 1. Criar conta em https://sendgrid.com
+# 2. Ir em Settings > API Keys
+# 3. Criar nova API Key com permissões de envio
+SENDGRID_API_KEY=your_sendgrid_api_key_here
+SENDGRID_FROM_EMAIL=noreply@bellebook.com
+SENDGRID_FROM_NAME=BelleBook
+
+# Redis/Bull Queue (for email scheduling)
+# Para desenvolvimento local, use Docker: docker run -d -p 6379:6379 redis
+# Para produção, use Redis Cloud, Railway Redis, ou similar
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
