--- a/bellebook-backend/package.json
+++ b/bellebook-backend/package.json
@@ -22,13 +22,17 @@
   },
   "dependencies": {
     "@google-cloud/local-auth": "^3.0.1",
+    "@nestjs/bullmq": "^11.0.4",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@sendgrid/mail": "^8.1.4",
+    "bullmq": "^5.28.2",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "google-auth-library": "^10.5.0",
     "googleapis": "^166.0.0",
+    "handlebars": "^4.7.8",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
